[gd_scene load_steps=13 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://weapons/bong/static_bong.tscn" type="PackedScene" id=2]
[ext_resource path="res://items/weapons/pp2000_wm.tscn" type="PackedScene" id=3]
[ext_resource path="res://weapons/ak12/ak12_wm.tscn" type="PackedScene" id=4]
[ext_resource path="res://weapons/remington/shotgun_wm.tscn" type="PackedScene" id=5]
[ext_resource path="res://props/table.tscn" type="PackedScene" id=6]
[ext_resource path="res://effects/prtcls.tscn" type="PackedScene" id=7]
[ext_resource path="res://416579a9-8694-4b41-9134-9f52e45f7bf1.jpg" type="Texture" id=8]

[sub_resource type="ProceduralSky" id=1]

radiance_size = 4
sky_top_color = Color( 0.44601, 0.894531, 0.352921, 1 )
sky_horizon_color = Color( 0, 0, 0, 1 )
sky_curve = 2.73207
sky_energy = 2.0
ground_bottom_color = Color( 0.332888, 0.480469, 0.170792, 1 )
ground_horizon_color = Color( 0, 0, 0, 1 )
ground_curve = 4.94558
ground_energy = 1.0
sun_color = Color( 0.484375, 1, 0.516602, 1 )
sun_latitude = 0.0
sun_longitude = 0.0
sun_angle_min = 0.0
sun_angle_max = 0.0
sun_curve = 0.0933034
sun_energy = 0.0
texture_size = 2
_sections_unfolded = [ "Ground", "Sky" ]

[sub_resource type="Environment" id=2]

background_mode = 2
background_sky = SubResource( 1 )
background_sky_custom_fov = 0.0
background_color = Color( 0, 0, 0, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 0.316846, 0.347656, 0.315063, 1 )
ambient_light_energy = 0.5
ambient_light_sky_contribution = 0.5
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = true
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 5.0
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Ambient Light", "Background", "Glow", "SS Reflections" ]

[sub_resource type="PlaneMesh" id=3]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector2( 2, 2 )
subdivide_width = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=4]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
albedo_texture = ExtResource( 8 )
metallic = 0.0
metallic_specular = 0.0
metallic_texture_channel = 0
roughness = 1.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Emission" ]

[node name="menu" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="0"]

environment = SubResource( 2 )

[node name="bong2" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1654, -0.218455, -0.567741 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="pp2000_wm" parent="." index="2" instance=ExtResource( 3 )]

transform = Transform( -0.0225576, 0.257834, -0.965926, 0.996195, 0.0871558, 0, 0.084186, -0.96225, -0.258819, 0.00923972, -0.0458902, 0.592852 )

[node name="akwm" parent="." index="3" instance=ExtResource( 4 )]

transform = Transform( -4.35451e-08, -0.996195, -0.0871557, 0.984808, 0.0151344, -0.172987, 0.173648, -0.0858316, 0.98106, 0.426549, 0.153425, -0.381691 )
shell = "9mm"
dmg = 5

[node name="shotgun" parent="." index="4" instance=ExtResource( 5 )]

transform = Transform( 0.0701706, -0.47343, -0.878032, 0.991085, 0.133022, 0.00748071, 0.113256, -0.870729, 0.478543, -0.26134, 0.017652, -0.546827 )
shell = "9mm"
dmg = 5
number = 1

[node name="SpotLight" type="SpotLight" parent="." index="5"]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.95278, 2.89099, -0.0334741 )
layers = 1
light_color = Color( 0.752028, 0.800781, 0.472336, 1 )
light_energy = 0.543639
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 6.61646
spot_attenuation = 1.0
spot_angle = 34.1882
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Editor", "Shadow", "Transform" ]

[node name="table" parent="." index="6" instance=ExtResource( 6 )]

editor/display_folded = true
transform = Transform( 0.718908, 0, -0.695105, 0, 1, 0, 0.695105, 0, 0.718908, 0.487364, -1.91014, -0.385955 )

[node name="prtcls" parent="table" index="2" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0307618, 2.89111, 0.175743 )

[node name="rotator" type="Spatial" parent="." index="7"]

editor/display_folded = true
transform = Transform( 0.686109, -0.339422, 0.643465, -0.00734878, 0.881211, 0.472667, -0.727462, -0.329029, 0.602112, 0.427017, 0, -0.194522 )
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera" parent="rotator" index="0"]

transform = Transform( 1, 0, 0, 0, 0.974901, 0.222637, 0, -0.222637, 0.974901, -1.19209e-07, 1, 3 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="ff" type="MeshInstance" parent="." index="8"]

transform = Transform( 0.0324495, 0.993651, -0.110328, -0.0128939, 0.110542, 0.993833, 1.4709, -0.0209519, 0.0111459, -4.23754, 1, 0 )
visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = SubResource( 4 )
_sections_unfolded = [ "material" ]

[node name="cntr" type="Control" parent="." index="9"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 128.0
margin_top = -20.0
margin_right = 168.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="play" type="Button" parent="cntr" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -102.0
margin_right = 136.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = false
align = 1

[node name="quit" type="Button" parent="cntr" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -102.0
margin_top = 150.0
margin_right = 136.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1

[node name="settings" type="Button" parent="cntr" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -102.0
margin_top = 100.0
margin_right = 136.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Settings"
flat = false
align = 1

[node name="load" type="Button" parent="cntr" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -102.0
margin_top = 50.0
margin_right = 136.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load Game"
flat = false
align = 1

[node name="fade" type="ColorRect" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Mouse" ]

[connection signal="pressed" from="cntr/play" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="cntr/quit" to="." method="_on_quit_pressed"]

[connection signal="pressed" from="cntr/settings" to="." method="_on_settings_pressed"]

[connection signal="pressed" from="cntr/load" to="." method="_on_load_pressed"]


